fix(yalb-1104): alignment fix

--- a/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
+++ b/components/03-organisms/menu/primary-nav/_yds-primary-nav.scss
@@ -136,18 +136,6 @@ $menu-sub-max-width: 19rem;
       [aria-expanded='false'] ~ & {
         visibility: hidden;
       }
-
-      [data-site-header-nav-position='right'] [data-menu-variation='mega'] & {
-        right: 0;
-      }
-
-      [data-site-header-nav-position='left'] [data-menu-variation='mega'] & {
-        left: 0;
-      }
-
-      [data-site-header-nav-position='center'] [data-menu-variation='mega'] & {
-        left: 0;
-      }
     }
 
     [data-menu-variation='mega'] & {
@@ -169,6 +157,15 @@ $menu-sub-max-width: 19rem;
       @media (min-width: tokens.$break-mobile) {
         column-count: 1;
         box-shadow: var(--drop-shadow-level-1-bottom-shadow-only);
+
+        [data-site-header-nav-position='center'] &,
+        [data-site-header-nav-position='left'] & {
+          left: 0;
+        }
+
+        [data-site-header-nav-position='right'] & {
+          right: 0;
+        }
       }
     }
   }
@@ -263,6 +260,11 @@ $menu-sub-max-width: 19rem;
     color: var(--color-heading);
     margin-bottom: var(--size-spacing-3);
 
+    [data-menu-variation='mega'] & {
+      padding: var(--size-spacing-2) var(--size-spacing-5) var(--size-spacing-2)
+        calc(var(--size-spacing-2) + var(--size-spacing-1));
+    }
+
     [data-menu-variation='basic'] & {
       padding: var(--size-spacing-5) var(--size-spacing-6) var(--size-spacing-4);
       position: relative;
@@ -278,19 +280,14 @@ $menu-sub-max-width: 19rem;
         height: var(--border-thickness-1);
         background-color: var(--color-gray-200);
       }
-    }
 
-    [data-menu-variation='mega'] & {
-      padding: var(--size-spacing-2) var(--size-spacing-5) var(--size-spacing-2)
-        calc(var(--size-spacing-2) + var(--size-spacing-1));
-    }
+      :last-child > & {
+        margin-bottom: 0;
+      }
 
-    :last-child > & {
-      margin-bottom: 0;
-    }
-
-    :first-child > & {
-      padding-top: 0;
+      :first-child > & {
+        padding-top: 0;
+      }
     }
 
     // remove last child's bottom border
